Opening Websocket Connections

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     image: 'redis:alpine'
   nginx:
     restart: always
+    depends_on:
+      - api
+      - client
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
