--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ before_install:
   - docker build -t vgrechin/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - npm install client && docker run -e CI=true -v $(pwd)/client:/usr/app vgrechin/react-test npm test -- --coverage
+  - cd client
+  - npm install
+  - docker run -e CI=true -v $(pwd)/client:/usr/app vgrechin/react-test npm test -- --coverage
+  - cd ..
 
 after_success:
   - docker build -t vgrechin/multi-client ./client
