--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,7 +10,7 @@ RUN npm run build
 
 FROM nginx:alpine
 
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /usr/app/build /usr/share/nginx/html
 
 EXPOSE 3000
