--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,31 @@
-version: '3'
+version: "3"
 services:
-  postgres:
-    image: 'postgres:alpine'
-    environment:
-      - POSTGRES_PASSWORD=password
-  redis:
-    image: 'redis:alpine'
-  nginx:
-    restart: always
-    depends_on:
-      - api
-      - client
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
-    ports:
-      - '3050:80'
-  api:
-    build:
-      dockerfile: Dockerfile.dev
-      context: server
-    volumes:
-      - ./server:/usr/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - PGUSER=postgres
-      - PGHOST=postgres
-      - PGPORT=5432
-      - PGDATABASE=postgres
-      - PGPASSWORD=password
   client:
-    stdin_open: true
-    build:
-      dockerfile: Dockerfile.dev
-      context: client
-    volumes:
-      - ./client:/usr/app
-  worker:
-    build:
-      dockerfile: Dockerfile.dev
-      context: worker
-    volumes:
-      - ./worker:/usr/app
+    image: "vgrechin/multi-client"
+    mem_limit: 128m
+    hostname: client
+  server:
+    image: "vgrechin/multi-server"
+    mem_limit: 128m
+    hostname: api
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
+      - PGUSER=$PGUSER
+      - PGHOST=$PGHOST
+      - PGPORT=$PGPORT
+      - PGDATABASE=$PGDATABASE
+      - PGPASSWORD=$PGPASSWORD
+  worker:
+    image: "vgrechin/multi-worker"
+    mem_limit: 128m
+    hostname: worker
+    environment:
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$REDIS_PORT
+  nginx:
+    image: "vgrechin/multi-nginx"
+    mem_limit: 128m
+    hostname: nginx
+    ports:
+      - "80:80"
