--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine
+FROM node:alpine
 
 WORKDIR '/usr/app'
 
@@ -9,3 +9,5 @@ RUN npm install
 COPY . .
 
 CMD ["npm", "run", "start"]
+
+EXPOSE 6000
