Server and Worker pods deployment

--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client-deployment
+  name: server-deployment
 spec:
   replicas: 3
   selector:
     matchLabels:
-      component: web
+      component: server
   template:
     metadata:
       labels:
-        component: web
+        component: server
     spec:
       containers:
-        - name: client
-          image: vgrechin/multi-client
+        - name: server
+          image: vgrechin/multi-server
           resources:
             limits:
               memory: "128Mi"
               cpu: "100m"
           ports:
-            - containerPort: 3000
+            - containerPort: 6000
